[package]
name = "synapse-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
reqwest = { version = "0.11.18", features = ["json"] }
either = "1.8.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.18"
env_logger = "0.10.0"
thiserror = "1.0.40"
anyhow = "1.0.75"
clap = { version = "4.3.24", features = ["derive"] }
colored = "2.0.4"
chrono = {version = "0.4.28", features = ["serde"]}
