[package]
name = "apicrab"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
log = "0.4.18"
env_logger = "0.10.0"
anyhow = "1.0.75"
clap = { version = "4.3.24", features = ["derive"] }
colored = "2.0.4"
chrono = {version = "0.4.28", features = ["serde"]}
ratatui = { version = "0.23.0", features = ["all-widgets"] }
crossterm = "0.27.0"
rand = "0.8.5"
arboard = "3.2.1"
itertools = "0.11.0"
futures = "0.3.28"
assert-json-diff = "2.0.2"
openapiv3 = "1.0.3"
async-trait = "0.1.73"
